# virtughan

./: .gitignore  .pdm-python  404.html  API.py  CHANGELOG.md  Dockerfile  README.md  Readme.md  VirtuGhan_Python_Usage_Example.ipynb  cog.md  index.html  main.py  mkdocs.yml  objects.inv  paper.bib  paper.md  playground.ipynb  pyproject.toml  requirements.txt  sentinel2_cog_r10_4326.tif.aux.xml  sitemap.xml  test.ipynb
.github/workflows/: docker-build-publish.yml  draft-pdf.yml  mkdocs.yml  publish.yml  tests.yml
cog/: index.html
data/: landsat-bands.json  sentinel-2-bands.json
docs/: index.html  install.md  paper.md
docs/examples/: usage.ipynb
docs/src/: engine.md  extract.md  tile.md  utis.md
examples/usage/: index.html
install/: index.html
ops/: virtughan.service
scripts/: process_ndvi_cog_tiles.py
search/: search_index.json
src/engine/: index.html
src/extract/: index.html
src/scog_compute/: engine.py  process_ndvi_cog_tiles.py
src/tile/: index.html
src/utis/: index.html
src/vcube/: engine.py  extract.py  tile.py  utils.py
src/vcube/engines/: engine_common.py  landsat89_engine.py  sentinel2_engine.py  sentinel2_engine1.py
src/vcube/extractors/: extractor_common.py  landsat89_extractor.py  sentinel2_extractor.py  sentinel2_extractor1.py
static/img/: circle-plus-solid.png:Zone.Identifier  hand-regular.png:Zone.Identifier
static/js/: colorpalette.js  draw.js  export_download.js  filters.js  layerswitcher.js  main.js  map.js  message_warning.js  resultmodal_timeslider.js
templates/: about.html  index.html
tests/: test_vcube.py
(+6 files in other folders)
