[project]
name = "scog-compute"
version = "0.0.1"
description = "Sentinel Cog Compute"
authors = [
    {name = "kshitijrajsharma", email = "skshitizraj@gmail.com"},
]
dependencies = [
    "matplotlib>=3.10.0",
    "rio-tiler>=7.2.2",
    "fastapi>=0.115.6",
    "pillow>=11.0.0",
    "tqdm>=4.67.1",
    "mercantile>=1.2.1",
    "numpy>=2.2.1",
    "shapely>=2.0.6",
    "httpx>=0.28.1",
    "aiocache>=0.12.3",
    "jinja2>=3.1.5"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
