[tool.poetry]
name = "scog-compute"
version = "0.0.1"
description = "Sentinel Cog Computation on Tiles"
authors = ["kshitijrajsharma <skshitizraj@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
rio-tiler = "^7.2.2"
fastapi = "^0.115.6"
pillow = "^11.0.0"
tqdm = "^4.67.1"
mercantile = "^1.2.1"
numpy = "^2.2.1"
shapely = "^2.0.6"
httpx = "^0.28.1"
aiocache = "^0.12.3"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
imageio = "^2.36.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
